# LLM-Evaluation

./: README.md
llm-manual-evaluation-system/: Taskfile.yaml  pyproject.toml
llm-manual-evaluation-system/evaluation_end_points/: main.py  settings.py
llm-manual-evaluation-system/evaluation_end_points/evaluate/: __init__.py  router.py
llm-manual-evaluation-system/evaluation_end_points/evaluate/evaluate_extracted_poses/: route.py  schema.py  service.py
llm-manual-evaluation-system/evaluation_end_points/evaluate/evaluate_summary/: route.py  schema.py  service.py
llm-manual-evaluation-system/tests/: service.py  test_extracted_poses.py  test_summary.py
llm-manual-evaluation-system/tests/datasets/extracted_poses/: extracted_poses_test_dataset.json
llm-manual-evaluation-system/tests/statistics/extracted_poses/: extracted_poses_statistics.json
llm-manual-evaluation-system/tests/statistics/summary/: summary_statistics.json
