[tool.poetry]
name = "llm-manual-evaluation-system"
version = "0.1.0"
description = ""
authors = ["Andreea Radu <aradu@threatconnect.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic-settings = "^2.4.0"
aiohttp = "^3.10.5"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
